--- a/src/NuGetGallery/Views/Shared/Layout.cshtml
+++ b/src/NuGetGallery/Views/Shared/Layout.cshtml
@@ -17,7 +17,8 @@
         <div id="outer-wrapper">
             <div id="content-wrapper">
                 <header class="main">
-                    <div id="logo"><a href="@Url.Home()">NuGet Gallery</a></div>
+                    <div id="logo"><a href="@Url.Home()">Windows Azure Web Sites Extensions</a>
+                        <span>Windows Azure Web Sites Extensions</span></div>
                     @Html.Partial(MVC.Shared.Views.UserDisplay)
                 </header>
                 <nav class="main">
