--- a/src/NuGetGallery/Views/Shared/Layout.cshtml
+++ b/src/NuGetGallery/Views/Shared/Layout.cshtml
@@ -25,7 +25,8 @@
         <div id="outer-wrapper">
             <div id="content-wrapper">
                 <header class="main">
-                    <div id="logo"><a href="@Url.Home()">@(Config.Current.Brand)</a></div>
+                    <div id="logo"><a href="@Url.Home()">Windows Azure Web Sites Extensions</a>
+                        <span>Windows Azure Web Sites Extensions</span></div>
                     @Html.Partial("UserDisplay")
                 </header>
                 <nav class="main">
